More renames from container to collection.

--- a/templates/group_item.hbs
+++ b/templates/group_item.hbs
@@ -2,7 +2,7 @@
     <div class="panel-heading" role="tab" id="heading-{{group_class}}">
       <h4 class="panel-title">
         <a data-toggle="collapse"
-           data-parent="#container"
+           data-parent="#collection"
            href="#{{group_class}}"
            aria-expanded="true"
            aria-controls="{{group_class}}"
@@ -10,6 +10,6 @@
       </h4>
     </div>
     <div id="{{group_class}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-{{group_class}}">
-      <ul class="list-group list-container" data-group-id="{{group_class}}"></ul>
+      <ul class="list-group list-collection" data-group-id="{{group_class}}"></ul>
   </div>
 </div>
