--- a/templates/list.hbs
+++ b/templates/list.hbs
@@ -1,2 +1,2 @@
-<div><ul class="list-group list-container nav nav-stacked" id="container"></ul></div>
+<div><ul class="list-group list-collection nav nav-stacked" id="collection"></ul></div>
 <div id="form-actions"></div>
