--- a/docs/_static/coderunner.css
+++ b/docs/_static/coderunner.css
@@ -21,3 +21,19 @@ button.coderunner {
     clear: both;
     display: block;
 }
+
+#my_collection dt {
+    font-weight: bold;
+    background: white none repeat scroll 0 0;
+    border: medium none;
+    color: #000000;
+    font-size: 100%;
+    font-weight: bold;
+    padding: 1px 10px 1px 1px;
+  }
+
+#my_collection dd {
+    margin: 0;
+    color: black;
+    padding: 0 0 0.5em 0;
+  }
