Rename gocept.jsform to its new name: ajja

--- a/docs/_static/coderunner.css
+++ b/docs/_static/coderunner.css
@@ -1,4 +1,4 @@
-.jsform {
+.ajja {
     background: #fff none repeat scroll 0 0;
     border: 1px solid #e1e4e5;
     overflow-x: auto;
@@ -7,7 +7,7 @@
     margin: 1px 0 24px 0;
 }
 
-.jsform .help-block {
+.ajja .help-block {
     display: none;
 }
 
