--- a/templates/list_item_edit.hbs
+++ b/templates/list_item_edit.hbs
@@ -7,7 +7,7 @@
       </div>
       <div class="modal-body">
         <div class="object-edit">
-          <form id="object-jsform"></form>
+          <form id="object-form"></form>
           <button type="button" data-dismiss="modal"
                   id="close-object-edit-form" class="btn btn-primary"
             >{{save_button_title}}</button>
