--- a/templates/form_radio_list.hbs
+++ b/templates/form_radio_list.hbs
@@ -1,7 +1,7 @@
 {{#each source}}
     <div class="checkbox">
         <input type="radio" id="{{../name}}_{{token}}" name="{{../name}}" value="{{token}}"
-               {{#if disabled}} disabled="disabled" {{/if}}
+               {{#if ../disabled}} disabled="disabled" {{/if}}
                data-bind="checked: {{../name}}" />
         <label class="control-label" for="{{../name}}_{{token}}">{{title}}</label>
     </div>
