Add form_object_as_buttons template. Add option to hide form fields.

--- a/templates/form_multiselect.hbs
+++ b/templates/form_multiselect.hbs
@@ -1,6 +1,7 @@
 <select name="{{name}}"
         multiple="multiple"
         {{#if disabled}} disabled="disabled" {{/if}}
+        {{#if hidden}} hidden {{/if}}
         data-bind="selectedOptions: {{name}},
                    options: __sources__.{{name}},
                    optionsText: 'title',
