--- a/templates/form_number.hbs
+++ b/templates/form_number.hbs
@@ -1,1 +1,1 @@
-<input type="number" data-bind="value: {{name}}" name="{{name}}" {{#if disabled}} disabled="disabled" {{/if}} class="form-control" value="" />
+<input type="number" data-bind="value: {{name}}" name="{{name}}" {{#if hidden}} hidden {{/if}} {{#if disabled}} disabled="disabled" {{/if}} class="form-control" value="" />
