--- a/templates/form_boolean.hbs
+++ b/templates/form_boolean.hbs
@@ -1,1 +1,1 @@
-<input type="checkbox" name="{{name}}" {{#if disabled}} disabled="disabled" {{/if}} data-bind="checked: {{name}}" />
+<input type="checkbox" name="{{name}}" {{#if hidden}} hidden {{/if}} {{#if disabled}} disabled="disabled" {{/if}} data-bind="checked: {{name}}" />
