--- a/templates/form_text.hbs
+++ b/templates/form_text.hbs
@@ -1,1 +1,1 @@
-<textarea class="form-control form-{{name}}" data-bind="value: {{name}}" {{#if disabled}} disabled="disabled" {{/if}} name="{{name}}"></textarea>
+<textarea class="form-control form-{{name}}" data-bind="value: {{name}}" {{#if hidden}} hidden {{/if}} {{#if disabled}} disabled="disabled" {{/if}} name="{{name}}"></textarea>
